// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`バトル進行の結果、バトル終了となる 1`] = `
{
  "connections": [
    {
      "connectionId": "defender-connection",
      "state": {
        "type": "None",
      },
      "userID": "defender-userid",
    },
    {
      "connectionId": "attacker--connection",
      "state": {
        "type": "None",
      },
      "userID": "attacker-userid",
    },
  ],
  "endBattleID": "test-battle",
  "isGameEnd": true,
  "update": [
    {
      "activePlayerId": "attacker-player-id",
      "effect": {
        "attacker": "attacker-player-id",
        "attackerBattery": 4,
        "defenderBattery": 0,
        "name": "BatteryDeclaration",
        "originalBatteryOfAttacker": 4,
        "originalBatteryOfDefender": 0,
      },
      "players": [
        {
          "armdozer": {
            "battery": 5,
            "burst": {
              "buffPower": 1000,
              "duration": 2,
              "recoverBattery": 3,
              "type": "BuffPower",
            },
            "effects": [],
            "enableBurst": true,
            "hp": 3300,
            "id": "NEO_LANDOZER",
            "maxBattery": 5,
            "maxHp": 3300,
            "name": "ネオランドーザ",
            "power": 2300,
            "speed": 1500,
          },
          "pilot": {
            "enableSkill": true,
            "id": "EMPTY_PLAYER",
            "name": "名無し",
            "skill": {
              "recoverBattery": 2,
              "type": "RecoverBatterySkill",
            },
          },
          "playerId": "defender-player",
        },
        {
          "armdozer": {
            "battery": 1,
            "burst": {
              "recoverBattery": 5,
              "turnStartBatteryCorrect": 1,
              "type": "RecoverBattery",
            },
            "effects": [],
            "enableBurst": true,
            "hp": 3100,
            "id": "SHIN_BRAVER",
            "maxBattery": 5,
            "maxHp": 3100,
            "name": "シンブレイバー",
            "power": 2000,
            "speed": 2000,
          },
          "pilot": {
            "enableSkill": true,
            "id": "EMPTY_PLAYER",
            "name": "名無し",
            "skill": {
              "recoverBattery": 2,
              "type": "RecoverBatterySkill",
            },
          },
          "playerId": "attacker-player-id",
        },
      ],
    },
    {
      "activePlayerId": "attacker-player-id",
      "effect": {
        "attacker": "attacker-player-id",
        "isDeath": true,
        "name": "Battle",
        "result": {
          "damage": 9999,
          "name": "CriticalHit",
        },
      },
      "players": [
        {
          "armdozer": {
            "battery": 5,
            "burst": {
              "buffPower": 1000,
              "duration": 2,
              "recoverBattery": 3,
              "type": "BuffPower",
            },
            "effects": [],
            "enableBurst": true,
            "hp": -6699,
            "id": "NEO_LANDOZER",
            "maxBattery": 5,
            "maxHp": 3300,
            "name": "ネオランドーザ",
            "power": 2300,
            "speed": 1500,
          },
          "pilot": {
            "enableSkill": true,
            "id": "EMPTY_PLAYER",
            "name": "名無し",
            "skill": {
              "recoverBattery": 2,
              "type": "RecoverBatterySkill",
            },
          },
          "playerId": "defender-player",
        },
        {
          "armdozer": {
            "battery": 1,
            "burst": {
              "recoverBattery": 5,
              "turnStartBatteryCorrect": 1,
              "type": "RecoverBattery",
            },
            "effects": [],
            "enableBurst": true,
            "hp": 3100,
            "id": "SHIN_BRAVER",
            "maxBattery": 5,
            "maxHp": 3100,
            "name": "シンブレイバー",
            "power": 2000,
            "speed": 2000,
          },
          "pilot": {
            "enableSkill": true,
            "id": "EMPTY_PLAYER",
            "name": "名無し",
            "skill": {
              "recoverBattery": 2,
              "type": "RecoverBatterySkill",
            },
          },
          "playerId": "attacker-player-id",
        },
      ],
    },
    {
      "activePlayerId": "attacker-player-id",
      "effect": {
        "name": "GameEnd",
        "result": {
          "type": "GameOver",
          "winner": "attacker-player-id",
        },
      },
      "players": [
        {
          "armdozer": {
            "battery": 5,
            "burst": {
              "buffPower": 1000,
              "duration": 2,
              "recoverBattery": 3,
              "type": "BuffPower",
            },
            "effects": [],
            "enableBurst": true,
            "hp": -6699,
            "id": "NEO_LANDOZER",
            "maxBattery": 5,
            "maxHp": 3300,
            "name": "ネオランドーザ",
            "power": 2300,
            "speed": 1500,
          },
          "pilot": {
            "enableSkill": true,
            "id": "EMPTY_PLAYER",
            "name": "名無し",
            "skill": {
              "recoverBattery": 2,
              "type": "RecoverBatterySkill",
            },
          },
          "playerId": "defender-player",
        },
        {
          "armdozer": {
            "battery": 1,
            "burst": {
              "recoverBattery": 5,
              "turnStartBatteryCorrect": 1,
              "type": "RecoverBattery",
            },
            "effects": [],
            "enableBurst": true,
            "hp": 3100,
            "id": "SHIN_BRAVER",
            "maxBattery": 5,
            "maxHp": 3100,
            "name": "シンブレイバー",
            "power": 2000,
            "speed": 2000,
          },
          "pilot": {
            "enableSkill": true,
            "id": "EMPTY_PLAYER",
            "name": "名無し",
            "skill": {
              "recoverBattery": 2,
              "type": "RecoverBatterySkill",
            },
          },
          "playerId": "attacker-player-id",
        },
      ],
    },
  ],
}
`;

exports[`バトル進行の結果、バトル継続となる 1`] = `
{
  "battle": {
    "battleID": "test-battle",
    "flowID": "mock-id-1",
    "players": [
      {
        "armdozer": {
          "burst": {
            "buffPower": 1000,
            "duration": 2,
            "recoverBattery": 3,
            "type": "BuffPower",
          },
          "id": "NEO_LANDOZER",
          "maxBattery": 5,
          "maxHp": 3300,
          "name": "ネオランドーザ",
          "power": 2300,
          "speed": 1500,
        },
        "connectionId": "defender-connection",
        "pilot": {
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "defender-player",
        "userID": "defender-userid",
      },
      {
        "armdozer": {
          "burst": {
            "recoverBattery": 5,
            "turnStartBatteryCorrect": 1,
            "type": "RecoverBattery",
          },
          "id": "SHIN_BRAVER",
          "maxBattery": 5,
          "maxHp": 3100,
          "name": "シンブレイバー",
          "power": 2000,
          "speed": 2000,
        },
        "connectionId": "attacker--connection",
        "pilot": {
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "attacker-player-id",
        "userID": "attacker-userid",
      },
    ],
    "poller": "defender-userid",
    "stateHistory": [
      {
        "activePlayerId": "attacker-player-id",
        "effect": {
          "name": "StartGame",
        },
        "players": [
          {
            "armdozer": {
              "battery": 5,
              "burst": {
                "buffPower": 1000,
                "duration": 2,
                "recoverBattery": 3,
                "type": "BuffPower",
              },
              "effects": [],
              "enableBurst": true,
              "hp": 3300,
              "id": "NEO_LANDOZER",
              "maxBattery": 5,
              "maxHp": 3300,
              "name": "ネオランドーザ",
              "power": 2300,
              "speed": 1500,
            },
            "pilot": {
              "enableSkill": true,
              "id": "EMPTY_PLAYER",
              "name": "名無し",
              "skill": {
                "recoverBattery": 2,
                "type": "RecoverBatterySkill",
              },
            },
            "playerId": "defender-player",
          },
          {
            "armdozer": {
              "battery": 5,
              "burst": {
                "recoverBattery": 5,
                "turnStartBatteryCorrect": 1,
                "type": "RecoverBattery",
              },
              "effects": [],
              "enableBurst": true,
              "hp": 3100,
              "id": "SHIN_BRAVER",
              "maxBattery": 5,
              "maxHp": 3100,
              "name": "シンブレイバー",
              "power": 2000,
              "speed": 2000,
            },
            "pilot": {
              "enableSkill": true,
              "id": "EMPTY_PLAYER",
              "name": "名無し",
              "skill": {
                "recoverBattery": 2,
                "type": "RecoverBatterySkill",
              },
            },
            "playerId": "attacker-player-id",
          },
        ],
      },
      {
        "activePlayerId": "attacker-player-id",
        "effect": {
          "name": "InputCommand",
          "players": [
            {
              "command": [
                {
                  "battery": 0,
                  "type": "BATTERY_COMMAND",
                },
                {
                  "battery": 1,
                  "type": "BATTERY_COMMAND",
                },
                {
                  "battery": 2,
                  "type": "BATTERY_COMMAND",
                },
                {
                  "battery": 3,
                  "type": "BATTERY_COMMAND",
                },
                {
                  "battery": 4,
                  "type": "BATTERY_COMMAND",
                },
                {
                  "battery": 5,
                  "type": "BATTERY_COMMAND",
                },
                {
                  "type": "BURST_COMMAND",
                },
                {
                  "type": "PILOT_SKILL_COMMAND",
                },
              ],
              "playerId": "defender-player",
              "selectable": true,
            },
            {
              "command": [
                {
                  "battery": 0,
                  "type": "BATTERY_COMMAND",
                },
                {
                  "battery": 1,
                  "type": "BATTERY_COMMAND",
                },
                {
                  "battery": 2,
                  "type": "BATTERY_COMMAND",
                },
                {
                  "battery": 3,
                  "type": "BATTERY_COMMAND",
                },
                {
                  "battery": 4,
                  "type": "BATTERY_COMMAND",
                },
                {
                  "battery": 5,
                  "type": "BATTERY_COMMAND",
                },
                {
                  "type": "BURST_COMMAND",
                },
                {
                  "type": "PILOT_SKILL_COMMAND",
                },
              ],
              "playerId": "attacker-player-id",
              "selectable": true,
            },
          ],
        },
        "players": [
          {
            "armdozer": {
              "battery": 5,
              "burst": {
                "buffPower": 1000,
                "duration": 2,
                "recoverBattery": 3,
                "type": "BuffPower",
              },
              "effects": [],
              "enableBurst": true,
              "hp": 3300,
              "id": "NEO_LANDOZER",
              "maxBattery": 5,
              "maxHp": 3300,
              "name": "ネオランドーザ",
              "power": 2300,
              "speed": 1500,
            },
            "pilot": {
              "enableSkill": true,
              "id": "EMPTY_PLAYER",
              "name": "名無し",
              "skill": {
                "recoverBattery": 2,
                "type": "RecoverBatterySkill",
              },
            },
            "playerId": "defender-player",
          },
          {
            "armdozer": {
              "battery": 5,
              "burst": {
                "recoverBattery": 5,
                "turnStartBatteryCorrect": 1,
                "type": "RecoverBattery",
              },
              "effects": [],
              "enableBurst": true,
              "hp": 3100,
              "id": "SHIN_BRAVER",
              "maxBattery": 5,
              "maxHp": 3100,
              "name": "シンブレイバー",
              "power": 2000,
              "speed": 2000,
            },
            "pilot": {
              "enableSkill": true,
              "id": "EMPTY_PLAYER",
              "name": "名無し",
              "skill": {
                "recoverBattery": 2,
                "type": "RecoverBatterySkill",
              },
            },
            "playerId": "attacker-player-id",
          },
        ],
      },
      {
        "activePlayerId": "attacker-player-id",
        "effect": {
          "attacker": "attacker-player-id",
          "attackerBattery": 2,
          "defenderBattery": 1,
          "name": "BatteryDeclaration",
          "originalBatteryOfAttacker": 2,
          "originalBatteryOfDefender": 1,
        },
        "players": [
          {
            "armdozer": {
              "battery": 4,
              "burst": {
                "buffPower": 1000,
                "duration": 2,
                "recoverBattery": 3,
                "type": "BuffPower",
              },
              "effects": [],
              "enableBurst": true,
              "hp": 3300,
              "id": "NEO_LANDOZER",
              "maxBattery": 5,
              "maxHp": 3300,
              "name": "ネオランドーザ",
              "power": 2300,
              "speed": 1500,
            },
            "pilot": {
              "enableSkill": true,
              "id": "EMPTY_PLAYER",
              "name": "名無し",
              "skill": {
                "recoverBattery": 2,
                "type": "RecoverBatterySkill",
              },
            },
            "playerId": "defender-player",
          },
          {
            "armdozer": {
              "battery": 3,
              "burst": {
                "recoverBattery": 5,
                "turnStartBatteryCorrect": 1,
                "type": "RecoverBattery",
              },
              "effects": [],
              "enableBurst": true,
              "hp": 3100,
              "id": "SHIN_BRAVER",
              "maxBattery": 5,
              "maxHp": 3100,
              "name": "シンブレイバー",
              "power": 2000,
              "speed": 2000,
            },
            "pilot": {
              "enableSkill": true,
              "id": "EMPTY_PLAYER",
              "name": "名無し",
              "skill": {
                "recoverBattery": 2,
                "type": "RecoverBatterySkill",
              },
            },
            "playerId": "attacker-player-id",
          },
        ],
      },
      {
        "activePlayerId": "attacker-player-id",
        "effect": {
          "attacker": "attacker-player-id",
          "isDeath": false,
          "name": "Battle",
          "result": {
            "damage": 2000,
            "name": "NormalHit",
          },
        },
        "players": [
          {
            "armdozer": {
              "battery": 4,
              "burst": {
                "buffPower": 1000,
                "duration": 2,
                "recoverBattery": 3,
                "type": "BuffPower",
              },
              "effects": [],
              "enableBurst": true,
              "hp": 1300,
              "id": "NEO_LANDOZER",
              "maxBattery": 5,
              "maxHp": 3300,
              "name": "ネオランドーザ",
              "power": 2300,
              "speed": 1500,
            },
            "pilot": {
              "enableSkill": true,
              "id": "EMPTY_PLAYER",
              "name": "名無し",
              "skill": {
                "recoverBattery": 2,
                "type": "RecoverBatterySkill",
              },
            },
            "playerId": "defender-player",
          },
          {
            "armdozer": {
              "battery": 3,
              "burst": {
                "recoverBattery": 5,
                "turnStartBatteryCorrect": 1,
                "type": "RecoverBattery",
              },
              "effects": [],
              "enableBurst": true,
              "hp": 3100,
              "id": "SHIN_BRAVER",
              "maxBattery": 5,
              "maxHp": 3100,
              "name": "シンブレイバー",
              "power": 2000,
              "speed": 2000,
            },
            "pilot": {
              "enableSkill": true,
              "id": "EMPTY_PLAYER",
              "name": "名無し",
              "skill": {
                "recoverBattery": 2,
                "type": "RecoverBatterySkill",
              },
            },
            "playerId": "attacker-player-id",
          },
        ],
      },
      {
        "activePlayerId": "attacker-player-id",
        "effect": {
          "battleResult": {
            "damage": 2000,
            "name": "NormalHit",
          },
          "defender": "defender-player",
          "name": "RightItself",
        },
        "players": [
          {
            "armdozer": {
              "battery": 4,
              "burst": {
                "buffPower": 1000,
                "duration": 2,
                "recoverBattery": 3,
                "type": "BuffPower",
              },
              "effects": [],
              "enableBurst": true,
              "hp": 1300,
              "id": "NEO_LANDOZER",
              "maxBattery": 5,
              "maxHp": 3300,
              "name": "ネオランドーザ",
              "power": 2300,
              "speed": 1500,
            },
            "pilot": {
              "enableSkill": true,
              "id": "EMPTY_PLAYER",
              "name": "名無し",
              "skill": {
                "recoverBattery": 2,
                "type": "RecoverBatterySkill",
              },
            },
            "playerId": "defender-player",
          },
          {
            "armdozer": {
              "battery": 3,
              "burst": {
                "recoverBattery": 5,
                "turnStartBatteryCorrect": 1,
                "type": "RecoverBattery",
              },
              "effects": [],
              "enableBurst": true,
              "hp": 3100,
              "id": "SHIN_BRAVER",
              "maxBattery": 5,
              "maxHp": 3100,
              "name": "シンブレイバー",
              "power": 2000,
              "speed": 2000,
            },
            "pilot": {
              "enableSkill": true,
              "id": "EMPTY_PLAYER",
              "name": "名無し",
              "skill": {
                "recoverBattery": 2,
                "type": "RecoverBatterySkill",
              },
            },
            "playerId": "attacker-player-id",
          },
        ],
      },
      {
        "activePlayerId": "attacker-player-id",
        "effect": {
          "endArmdozerEffects": [],
          "name": "UpdateRemainingTurn",
        },
        "players": [
          {
            "armdozer": {
              "battery": 4,
              "burst": {
                "buffPower": 1000,
                "duration": 2,
                "recoverBattery": 3,
                "type": "BuffPower",
              },
              "effects": [],
              "enableBurst": true,
              "hp": 1300,
              "id": "NEO_LANDOZER",
              "maxBattery": 5,
              "maxHp": 3300,
              "name": "ネオランドーザ",
              "power": 2300,
              "speed": 1500,
            },
            "pilot": {
              "enableSkill": true,
              "id": "EMPTY_PLAYER",
              "name": "名無し",
              "skill": {
                "recoverBattery": 2,
                "type": "RecoverBatterySkill",
              },
            },
            "playerId": "defender-player",
          },
          {
            "armdozer": {
              "battery": 3,
              "burst": {
                "recoverBattery": 5,
                "turnStartBatteryCorrect": 1,
                "type": "RecoverBattery",
              },
              "effects": [],
              "enableBurst": true,
              "hp": 3100,
              "id": "SHIN_BRAVER",
              "maxBattery": 5,
              "maxHp": 3100,
              "name": "シンブレイバー",
              "power": 2000,
              "speed": 2000,
            },
            "pilot": {
              "enableSkill": true,
              "id": "EMPTY_PLAYER",
              "name": "名無し",
              "skill": {
                "recoverBattery": 2,
                "type": "RecoverBatterySkill",
              },
            },
            "playerId": "attacker-player-id",
          },
        ],
      },
      {
        "activePlayerId": "defender-player",
        "effect": {
          "name": "TurnChange",
          "recoverBattery": 3,
        },
        "players": [
          {
            "armdozer": {
              "battery": 5,
              "burst": {
                "buffPower": 1000,
                "duration": 2,
                "recoverBattery": 3,
                "type": "BuffPower",
              },
              "effects": [],
              "enableBurst": true,
              "hp": 1300,
              "id": "NEO_LANDOZER",
              "maxBattery": 5,
              "maxHp": 3300,
              "name": "ネオランドーザ",
              "power": 2300,
              "speed": 1500,
            },
            "pilot": {
              "enableSkill": true,
              "id": "EMPTY_PLAYER",
              "name": "名無し",
              "skill": {
                "recoverBattery": 2,
                "type": "RecoverBatterySkill",
              },
            },
            "playerId": "defender-player",
          },
          {
            "armdozer": {
              "battery": 3,
              "burst": {
                "recoverBattery": 5,
                "turnStartBatteryCorrect": 1,
                "type": "RecoverBattery",
              },
              "effects": [],
              "enableBurst": true,
              "hp": 3100,
              "id": "SHIN_BRAVER",
              "maxBattery": 5,
              "maxHp": 3100,
              "name": "シンブレイバー",
              "power": 2000,
              "speed": 2000,
            },
            "pilot": {
              "enableSkill": true,
              "id": "EMPTY_PLAYER",
              "name": "名無し",
              "skill": {
                "recoverBattery": 2,
                "type": "RecoverBatterySkill",
              },
            },
            "playerId": "attacker-player-id",
          },
        ],
      },
      {
        "activePlayerId": "defender-player",
        "effect": {
          "name": "InputCommand",
          "players": [
            {
              "command": [
                {
                  "battery": 0,
                  "type": "BATTERY_COMMAND",
                },
                {
                  "battery": 1,
                  "type": "BATTERY_COMMAND",
                },
                {
                  "battery": 2,
                  "type": "BATTERY_COMMAND",
                },
                {
                  "battery": 3,
                  "type": "BATTERY_COMMAND",
                },
                {
                  "type": "BURST_COMMAND",
                },
                {
                  "type": "PILOT_SKILL_COMMAND",
                },
              ],
              "playerId": "attacker-player-id",
              "selectable": true,
            },
            {
              "command": [
                {
                  "battery": 0,
                  "type": "BATTERY_COMMAND",
                },
                {
                  "battery": 1,
                  "type": "BATTERY_COMMAND",
                },
                {
                  "battery": 2,
                  "type": "BATTERY_COMMAND",
                },
                {
                  "battery": 3,
                  "type": "BATTERY_COMMAND",
                },
                {
                  "battery": 4,
                  "type": "BATTERY_COMMAND",
                },
                {
                  "battery": 5,
                  "type": "BATTERY_COMMAND",
                },
                {
                  "type": "BURST_COMMAND",
                },
                {
                  "type": "PILOT_SKILL_COMMAND",
                },
              ],
              "playerId": "defender-player",
              "selectable": true,
            },
          ],
        },
        "players": [
          {
            "armdozer": {
              "battery": 5,
              "burst": {
                "buffPower": 1000,
                "duration": 2,
                "recoverBattery": 3,
                "type": "BuffPower",
              },
              "effects": [],
              "enableBurst": true,
              "hp": 1300,
              "id": "NEO_LANDOZER",
              "maxBattery": 5,
              "maxHp": 3300,
              "name": "ネオランドーザ",
              "power": 2300,
              "speed": 1500,
            },
            "pilot": {
              "enableSkill": true,
              "id": "EMPTY_PLAYER",
              "name": "名無し",
              "skill": {
                "recoverBattery": 2,
                "type": "RecoverBatterySkill",
              },
            },
            "playerId": "defender-player",
          },
          {
            "armdozer": {
              "battery": 3,
              "burst": {
                "recoverBattery": 5,
                "turnStartBatteryCorrect": 1,
                "type": "RecoverBattery",
              },
              "effects": [],
              "enableBurst": true,
              "hp": 3100,
              "id": "SHIN_BRAVER",
              "maxBattery": 5,
              "maxHp": 3100,
              "name": "シンブレイバー",
              "power": 2000,
              "speed": 2000,
            },
            "pilot": {
              "enableSkill": true,
              "id": "EMPTY_PLAYER",
              "name": "名無し",
              "skill": {
                "recoverBattery": 2,
                "type": "RecoverBatterySkill",
              },
            },
            "playerId": "attacker-player-id",
          },
        ],
      },
    ],
  },
  "isGameEnd": false,
  "update": [
    {
      "activePlayerId": "attacker-player-id",
      "effect": {
        "attacker": "attacker-player-id",
        "attackerBattery": 2,
        "defenderBattery": 1,
        "name": "BatteryDeclaration",
        "originalBatteryOfAttacker": 2,
        "originalBatteryOfDefender": 1,
      },
      "players": [
        {
          "armdozer": {
            "battery": 4,
            "burst": {
              "buffPower": 1000,
              "duration": 2,
              "recoverBattery": 3,
              "type": "BuffPower",
            },
            "effects": [],
            "enableBurst": true,
            "hp": 3300,
            "id": "NEO_LANDOZER",
            "maxBattery": 5,
            "maxHp": 3300,
            "name": "ネオランドーザ",
            "power": 2300,
            "speed": 1500,
          },
          "pilot": {
            "enableSkill": true,
            "id": "EMPTY_PLAYER",
            "name": "名無し",
            "skill": {
              "recoverBattery": 2,
              "type": "RecoverBatterySkill",
            },
          },
          "playerId": "defender-player",
        },
        {
          "armdozer": {
            "battery": 3,
            "burst": {
              "recoverBattery": 5,
              "turnStartBatteryCorrect": 1,
              "type": "RecoverBattery",
            },
            "effects": [],
            "enableBurst": true,
            "hp": 3100,
            "id": "SHIN_BRAVER",
            "maxBattery": 5,
            "maxHp": 3100,
            "name": "シンブレイバー",
            "power": 2000,
            "speed": 2000,
          },
          "pilot": {
            "enableSkill": true,
            "id": "EMPTY_PLAYER",
            "name": "名無し",
            "skill": {
              "recoverBattery": 2,
              "type": "RecoverBatterySkill",
            },
          },
          "playerId": "attacker-player-id",
        },
      ],
    },
    {
      "activePlayerId": "attacker-player-id",
      "effect": {
        "attacker": "attacker-player-id",
        "isDeath": false,
        "name": "Battle",
        "result": {
          "damage": 2000,
          "name": "NormalHit",
        },
      },
      "players": [
        {
          "armdozer": {
            "battery": 4,
            "burst": {
              "buffPower": 1000,
              "duration": 2,
              "recoverBattery": 3,
              "type": "BuffPower",
            },
            "effects": [],
            "enableBurst": true,
            "hp": 1300,
            "id": "NEO_LANDOZER",
            "maxBattery": 5,
            "maxHp": 3300,
            "name": "ネオランドーザ",
            "power": 2300,
            "speed": 1500,
          },
          "pilot": {
            "enableSkill": true,
            "id": "EMPTY_PLAYER",
            "name": "名無し",
            "skill": {
              "recoverBattery": 2,
              "type": "RecoverBatterySkill",
            },
          },
          "playerId": "defender-player",
        },
        {
          "armdozer": {
            "battery": 3,
            "burst": {
              "recoverBattery": 5,
              "turnStartBatteryCorrect": 1,
              "type": "RecoverBattery",
            },
            "effects": [],
            "enableBurst": true,
            "hp": 3100,
            "id": "SHIN_BRAVER",
            "maxBattery": 5,
            "maxHp": 3100,
            "name": "シンブレイバー",
            "power": 2000,
            "speed": 2000,
          },
          "pilot": {
            "enableSkill": true,
            "id": "EMPTY_PLAYER",
            "name": "名無し",
            "skill": {
              "recoverBattery": 2,
              "type": "RecoverBatterySkill",
            },
          },
          "playerId": "attacker-player-id",
        },
      ],
    },
    {
      "activePlayerId": "attacker-player-id",
      "effect": {
        "battleResult": {
          "damage": 2000,
          "name": "NormalHit",
        },
        "defender": "defender-player",
        "name": "RightItself",
      },
      "players": [
        {
          "armdozer": {
            "battery": 4,
            "burst": {
              "buffPower": 1000,
              "duration": 2,
              "recoverBattery": 3,
              "type": "BuffPower",
            },
            "effects": [],
            "enableBurst": true,
            "hp": 1300,
            "id": "NEO_LANDOZER",
            "maxBattery": 5,
            "maxHp": 3300,
            "name": "ネオランドーザ",
            "power": 2300,
            "speed": 1500,
          },
          "pilot": {
            "enableSkill": true,
            "id": "EMPTY_PLAYER",
            "name": "名無し",
            "skill": {
              "recoverBattery": 2,
              "type": "RecoverBatterySkill",
            },
          },
          "playerId": "defender-player",
        },
        {
          "armdozer": {
            "battery": 3,
            "burst": {
              "recoverBattery": 5,
              "turnStartBatteryCorrect": 1,
              "type": "RecoverBattery",
            },
            "effects": [],
            "enableBurst": true,
            "hp": 3100,
            "id": "SHIN_BRAVER",
            "maxBattery": 5,
            "maxHp": 3100,
            "name": "シンブレイバー",
            "power": 2000,
            "speed": 2000,
          },
          "pilot": {
            "enableSkill": true,
            "id": "EMPTY_PLAYER",
            "name": "名無し",
            "skill": {
              "recoverBattery": 2,
              "type": "RecoverBatterySkill",
            },
          },
          "playerId": "attacker-player-id",
        },
      ],
    },
    {
      "activePlayerId": "attacker-player-id",
      "effect": {
        "endArmdozerEffects": [],
        "name": "UpdateRemainingTurn",
      },
      "players": [
        {
          "armdozer": {
            "battery": 4,
            "burst": {
              "buffPower": 1000,
              "duration": 2,
              "recoverBattery": 3,
              "type": "BuffPower",
            },
            "effects": [],
            "enableBurst": true,
            "hp": 1300,
            "id": "NEO_LANDOZER",
            "maxBattery": 5,
            "maxHp": 3300,
            "name": "ネオランドーザ",
            "power": 2300,
            "speed": 1500,
          },
          "pilot": {
            "enableSkill": true,
            "id": "EMPTY_PLAYER",
            "name": "名無し",
            "skill": {
              "recoverBattery": 2,
              "type": "RecoverBatterySkill",
            },
          },
          "playerId": "defender-player",
        },
        {
          "armdozer": {
            "battery": 3,
            "burst": {
              "recoverBattery": 5,
              "turnStartBatteryCorrect": 1,
              "type": "RecoverBattery",
            },
            "effects": [],
            "enableBurst": true,
            "hp": 3100,
            "id": "SHIN_BRAVER",
            "maxBattery": 5,
            "maxHp": 3100,
            "name": "シンブレイバー",
            "power": 2000,
            "speed": 2000,
          },
          "pilot": {
            "enableSkill": true,
            "id": "EMPTY_PLAYER",
            "name": "名無し",
            "skill": {
              "recoverBattery": 2,
              "type": "RecoverBatterySkill",
            },
          },
          "playerId": "attacker-player-id",
        },
      ],
    },
    {
      "activePlayerId": "defender-player",
      "effect": {
        "name": "TurnChange",
        "recoverBattery": 3,
      },
      "players": [
        {
          "armdozer": {
            "battery": 5,
            "burst": {
              "buffPower": 1000,
              "duration": 2,
              "recoverBattery": 3,
              "type": "BuffPower",
            },
            "effects": [],
            "enableBurst": true,
            "hp": 1300,
            "id": "NEO_LANDOZER",
            "maxBattery": 5,
            "maxHp": 3300,
            "name": "ネオランドーザ",
            "power": 2300,
            "speed": 1500,
          },
          "pilot": {
            "enableSkill": true,
            "id": "EMPTY_PLAYER",
            "name": "名無し",
            "skill": {
              "recoverBattery": 2,
              "type": "RecoverBatterySkill",
            },
          },
          "playerId": "defender-player",
        },
        {
          "armdozer": {
            "battery": 3,
            "burst": {
              "recoverBattery": 5,
              "turnStartBatteryCorrect": 1,
              "type": "RecoverBattery",
            },
            "effects": [],
            "enableBurst": true,
            "hp": 3100,
            "id": "SHIN_BRAVER",
            "maxBattery": 5,
            "maxHp": 3100,
            "name": "シンブレイバー",
            "power": 2000,
            "speed": 2000,
          },
          "pilot": {
            "enableSkill": true,
            "id": "EMPTY_PLAYER",
            "name": "名無し",
            "skill": {
              "recoverBattery": 2,
              "type": "RecoverBatterySkill",
            },
          },
          "playerId": "attacker-player-id",
        },
      ],
    },
    {
      "activePlayerId": "defender-player",
      "effect": {
        "name": "InputCommand",
        "players": [
          {
            "command": [
              {
                "battery": 0,
                "type": "BATTERY_COMMAND",
              },
              {
                "battery": 1,
                "type": "BATTERY_COMMAND",
              },
              {
                "battery": 2,
                "type": "BATTERY_COMMAND",
              },
              {
                "battery": 3,
                "type": "BATTERY_COMMAND",
              },
              {
                "type": "BURST_COMMAND",
              },
              {
                "type": "PILOT_SKILL_COMMAND",
              },
            ],
            "playerId": "attacker-player-id",
            "selectable": true,
          },
          {
            "command": [
              {
                "battery": 0,
                "type": "BATTERY_COMMAND",
              },
              {
                "battery": 1,
                "type": "BATTERY_COMMAND",
              },
              {
                "battery": 2,
                "type": "BATTERY_COMMAND",
              },
              {
                "battery": 3,
                "type": "BATTERY_COMMAND",
              },
              {
                "battery": 4,
                "type": "BATTERY_COMMAND",
              },
              {
                "battery": 5,
                "type": "BATTERY_COMMAND",
              },
              {
                "type": "BURST_COMMAND",
              },
              {
                "type": "PILOT_SKILL_COMMAND",
              },
            ],
            "playerId": "defender-player",
            "selectable": true,
          },
        ],
      },
      "players": [
        {
          "armdozer": {
            "battery": 5,
            "burst": {
              "buffPower": 1000,
              "duration": 2,
              "recoverBattery": 3,
              "type": "BuffPower",
            },
            "effects": [],
            "enableBurst": true,
            "hp": 1300,
            "id": "NEO_LANDOZER",
            "maxBattery": 5,
            "maxHp": 3300,
            "name": "ネオランドーザ",
            "power": 2300,
            "speed": 1500,
          },
          "pilot": {
            "enableSkill": true,
            "id": "EMPTY_PLAYER",
            "name": "名無し",
            "skill": {
              "recoverBattery": 2,
              "type": "RecoverBatterySkill",
            },
          },
          "playerId": "defender-player",
        },
        {
          "armdozer": {
            "battery": 3,
            "burst": {
              "recoverBattery": 5,
              "turnStartBatteryCorrect": 1,
              "type": "RecoverBattery",
            },
            "effects": [],
            "enableBurst": true,
            "hp": 3100,
            "id": "SHIN_BRAVER",
            "maxBattery": 5,
            "maxHp": 3100,
            "name": "シンブレイバー",
            "power": 2000,
            "speed": 2000,
          },
          "pilot": {
            "enableSkill": true,
            "id": "EMPTY_PLAYER",
            "name": "名無し",
            "skill": {
              "recoverBattery": 2,
              "type": "RecoverBatterySkill",
            },
          },
          "playerId": "attacker-player-id",
        },
      ],
    },
  ],
}
`;
